// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: critical 1`] = `
<c-simple-tooltip-stub
  content="Ongoing"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-state-critical-base);"
  >
    warning
  </i>
</c-simple-tooltip-stub>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: major 1`] = `
<c-simple-tooltip-stub
  content="Ongoing"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-state-major-base);"
  >
    warning
  </i>
</c-simple-tooltip-stub>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: minor 1`] = `
<c-simple-tooltip-stub
  content="Ongoing"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-state-minor-base);"
  >
    warning
  </i>
</c-simple-tooltip-stub>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with ongoing status and state: ok 1`] = `
<c-simple-tooltip-stub
  content="Ongoing"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-state-ok-base);"
  >
    warning
  </i>
</c-simple-tooltip-stub>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: cancelled 1`] = `
<c-simple-tooltip-stub
  content="Canceled"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-cancelled-base);"
  >
    highlight_off
  </i>
</c-simple-tooltip-stub>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: closed 1`] = `
<c-simple-tooltip-stub
  content="Closed"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-closed-base);"
  >
    check_circle_outline
  </i>
</c-simple-tooltip-stub>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: flapping 1`] = `
<c-simple-tooltip-stub
  content="Flapping"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-flapping-base);"
  >
    swap_vert
  </i>
</c-simple-tooltip-stub>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: noEvents 1`] = `
<c-no-events-icon-stub
  color="error"
  top=""
  value="1386435600000"
/>
`;

exports[`alarm-column-value-status Renders \`alarm-column-value-status\` with status: stealthy 1`] = `
<c-simple-tooltip-stub
  content="Stealth"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-stealthy-base);"
  >
    swap_vert
  </i>
</c-simple-tooltip-stub>
`;
